--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -81,6 +81,14 @@
   border-color: $grey-primary !important;
 }
 
+
+.flatpickr-day.selected.startRange + .endRange:not(:nth-child(7n+1)), .flatpickr-day.startRange.startRange + .endRange:not(:nth-child(7n+1)), .flatpickr-day.endRange.startRange + .endRange:not(:nth-child(7n+1)) {
+    -webkit-box-shadow: -10px 0 0 #e6e6e6 !important;
+     box-shadow: -10px 0 0 #e6e6e6 !important;
+}
+
+
+
 // --------------------------------
 
 .full-screen {
@@ -91,7 +99,7 @@
   color: white;
   width: 100%;
   padding-right: 120px;
-  text-align: center;
+  text-align: left;
   margin-left: 0;
   margin-right: 0;
   // margin: 0 auto;
